--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "spm-build",
+  "name": "spm-sea",
   "version": "1.3.0",
-  "description": "build tool for spm3.",
+  "description": "SPM Project bundler in seajs.",
   "main": "lib/index",
   "dependencies": {
     "6to5": "~3.3.3",
@@ -50,9 +50,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/spmjs/spm-build"
+    "url": "https://github.com/spmjs/spm-sea"
   },
-  "homepage": "https://github.com/spmjs/spm-build",
+  "homepage": "https://github.com/spmjs/spm-sea",
   "author": "chencheng <sorrycc@gmail.com>",
   "license": "MIT",
   "scripts": {
