--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spm-sea",
-  "version": "1.3.0",
-  "description": "SPM Project bundler in seajs.",
+  "version": "0.1.0",
+  "description": "SPM project bundler in seajs.",
   "main": "lib/index",
   "dependencies": {
     "6to5": "~3.3.3",
@@ -59,6 +59,6 @@
     "test": "make test"
   },
   "bin": {
-    "spm-build": "cli.js"
+    "spm-sea": "cli.js"
   }
 }
