--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "SPM project bundler in seajs.",
   "main": "lib/index",
   "dependencies": {
-    "6to5": "~3.3.3",
+    "babel-core": "~4.7.16",
     "cdeps": "~0.1.0",
     "co": "~4.1.0",
     "colorful": "~2.1.0",
